comit por sueño

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,40 @@
-spring.application.name=scaffolding
+##### Application properties #####
+app.name='Demo-Expensas'
+app.desc='demo de Expensas, originalmente planeado para ser mas complejo que esta aplicacion, esto solo es una demo'
+app.version='@project.version@'
 app.url=http://localhost:8080
-app.name=My Application
-app.desc=Description of My Application
-app.version=1.0.0
-app.dev-name=Developer Name
-app.dev-email=developer@example.com
+app.dev-name=GabrielScipioni
+app.dev-email='gabriel.scpioni21@gmail.com'
+
+### Configuración de la Aplicación ###
+spring.application.name=Demo-Expensas
+spring.liquibase.enabled=false
+
+
+### Configuración de la Base de Datos ###
+spring.datasource.url=jdbc:h2:mem:prode
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.defer-datasource-initialization=true
+
+spring.main.allow-circular-references=true
+logging.level.root=TRACE
+
+### Configuración de la Consola H2 ###
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+#cuando se desee actualizar la db aca se pone always
+spring.sql.init.mode=embedded
+spring.sql.init.data-locations=classpath:data.sql
+
+spring.jpa.show-sql=true
+
+spring.jpa.hibernate.ddl-auto=create
+
+
+#para revisar la base de datos ingresar a http://localhost:8080/h2-console
+
+
